# Cynthesizer

./: CMakeLists.txt  README.md  main.cpp
lib/include/: CynthView.h  Cynthesizer.h  SoundOutput.h
lib/libsoundio/: CMakeLists.txt
lib/src/: Cynthesizer.cpp  SoundOutput.cpp
